# lite-harness-supervisor

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  findings.md  full_diff.patch  progress.md  pyproject.toml  task_plan.md
.github/workflows/: publish.yml  test.yml
.supervisor/: config.yaml
.supervisor/evals/: promotions.jsonl
.supervisor/specs/: review-and-fix-sidecar-startup.yaml
docs/: 2026-04-09-agent-log-hook-analysis.md  ARCHITECTURE.md  PHILOSOPHY.md  a2a.md  getting-started.md
docs/design/: p2-external-surfaces.md  p3-observation-sources.md  p4-jsonl-observation.md
docs/plans/: 2026-04-08-sidecar-initial-instruction.md  2026-04-10-supervisor-stability-observability.md  2026-04-12-default-clarify-before-run.md  2026-04-13-codex-claude-handoff.md  (+26 more)
scripts/: lh-supervisor-attach.sh  test-e2e.sh  thin-supervisor-attach.sh
supervisor/: app.py  bootstrap.py  config.py  credentials.py  dev_app.py  global_registry.py  history.py  hook.py  hook_install.py  interventions.py  learning.py  loop.py  notifications.py  pause_summary.py  progress.py  session_detect.py  spec_approval.py
tests/: conftest.py  test_a2a_jsonrpc.py  test_a2a_server.py  test_a2a_tasks_get.py  test_a2a_tasks_send.py  test_acceptance.py  test_app_cli.py  test_attach_script.py  test_auto_intervention.py  test_bootstrap.py  test_boundary_audit.py  test_boundary_auth.py  test_boundary_guard.py  test_boundary_injection.py  test_boundary_models.py  test_boundary_rate_limit.py  test_boundary_redaction.py  test_branch_gate.py  test_channel_contract.py  test_checkpoint_protocol.py  test_checkpoint_v2_wire.py  test_ci_workflow.py  test_collaboration.py  test_command_dispatch.py  test_config.py  test_continue_gate.py  test_credentials.py  test_daemon.py  test_daemon_lifecycle.py  test_dashboard.py  test_delivery_protocol.py  test_dev_app_cli.py  test_escalation_reason_code.py  test_eval_canary.py  test_eval_cases.py  test_eval_comparator.py  test_eval_dossier.py  test_eval_executor.py  test_eval_improve.py  test_eval_promotion.py  (+65 more)
(+181 files in other folders)
