[project]
name = "thin-supervisor"
version = "0.2.0"
description = "Thin tmux sidecar supervisor for long-running AI coding agent workflows"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Chris Song"}]
readme = "README.md"
keywords = ["ai", "agents", "supervisor", "workflow", "tmux", "codex", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.40"]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/fakechris/thin-supervisor"
Issues = "https://github.com/fakechris/thin-supervisor/issues"
Changelog = "https://github.com/fakechris/thin-supervisor/blob/main/CHANGELOG.md"

[project.scripts]
thin-supervisor = "supervisor.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["supervisor"]
